samples/_failures_safe/1761318781_e4f14d_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e2e24bde.c: In function ‘main’:
./samples/SAFE/__tmp_e2e24bde.c:156:5: error: expected expression at end of input
  156 |     int op_count = sizeof
      |     ^~~
./samples/SAFE/__tmp_e2e24bde.c:156:5: error: expected declaration or statement at end of input
